--- a/app/src/main/res/layout/product_layout.xml
+++ b/app/src/main/res/layout/product_layout.xml
@@ -2,24 +2,32 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:stretchColumns="1,2,3,4">
+    android:orientation="vertical">
 
     <TextView
+        android:layout_marginStart="10dp"
+        android:textSize="15sp"
         android:id="@+id/productID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <TextView
+        android:layout_marginStart="10dp"
+        android:textSize="15sp"
         android:id="@+id/productName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <TextView
+        android:layout_marginStart="10dp"
+        android:textSize="15sp"
         android:id="@+id/productBarCode"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
     <TextView
+        android:layout_marginStart="10dp"
+        android:textSize="15sp"
         android:id="@+id/productRFID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
